--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'linuxconsulting';
-    src: url('/assets/linuxconsulting.woff') format('woff');
+    src: url('../assets/linuxconsulting.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: block;
