--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,46 @@ section:nth-child(7) {
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
+.card-header {
+    color: white;
+    text-align: left;
+    font-weight: 400;
+    border-bottom: 1px solid #ad4402;
+    padding: 5px 10px;
+}
+
+.card-main {
+    display: flex;
+    /* Children use Flexbox */
+    flex-direction: column;
+    /* Rotate Axis to Vertical */
+    justify-content: center;
+    /* Group Children in Center */
+    align-items: right;
+    /* Group Children in Center (+axis) */
+    padding: 15px 0;
+    /* Add padding to the top/bottom */
+}
+.main-description {
+    padding: 1rem;
+    padding-top: 0;
+}
+.card {
+    margin-bottom: 24px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    min-height: 200px;
+    word-wrap: break-word;
+    background-color: #e25f0c;
+    background-clip: border-box;
+    border: 1px solid #ad4402;
+    border-radius: .25rem;
+    text-align: left;
+    padding: 0 0 0 0;
+    font-size: 1.5rem;
+}
 
 .nav {
   margin: 0 0 0px 30px;
