--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ section:nth-child(7) {
     color: white;
     text-align: left;
     font-weight: 400;
-    border-bottom: 1px solid #ad4402;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);;
     padding: 5px 10px;
 }
 
@@ -126,9 +126,9 @@ section:nth-child(7) {
     min-width: 0;
     min-height: 200px;
     word-wrap: break-word;
-    background-color: #e25f0c;
+    background-color: rgba(0, 0, 0, 0.15);
     background-clip: border-box;
-    border: 1px solid #ad4402;
+    border: 1px solid rgba(0, 0, 0, 0.15);;
     border-radius: .25rem;
     text-align: left;
     padding: 0 0 0 0;
