--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,58 @@ a:hover {
           flex-direction: column;
 }
 
+.card {
+  margin-bottom: 24px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-width: 0;
+  min-height: 200px;
+  word-wrap: break-word;
+  background-color: rgba(0, 0, 0, 0.15);
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: .25rem;
+  text-align: left;
+  padding: 0 0 0 0;
+  font-size: 1.5rem;
+}
+
+.card__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: right;
+      -ms-flex-align: right;
+          align-items: right;
+  padding: 15px 0;
+}
+
+.card__header {
+  color: white;
+  text-align: left;
+  font-weight: 400;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 5px 10px;
+}
+
+.card__text {
+  padding: 1rem;
+  padding-top: 0;
+}
+
 section {
   height: 100vh;
   font-size: 40px;
@@ -93,46 +145,6 @@ section:nth-child(7) {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-}
-.card-header {
-    color: white;
-    text-align: left;
-    font-weight: 400;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.15);;
-    padding: 5px 10px;
-}
-
-.card-main {
-    display: flex;
-    /* Children use Flexbox */
-    flex-direction: column;
-    /* Rotate Axis to Vertical */
-    justify-content: center;
-    /* Group Children in Center */
-    align-items: right;
-    /* Group Children in Center (+axis) */
-    padding: 15px 0;
-    /* Add padding to the top/bottom */
-}
-.main-description {
-    padding: 1rem;
-    padding-top: 0;
-}
-.card {
-    margin-bottom: 24px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    min-height: 200px;
-    word-wrap: break-word;
-    background-color: rgba(0, 0, 0, 0.15);
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.15);;
-    border-radius: .25rem;
-    text-align: left;
-    padding: 0 0 0 0;
-    font-size: 1.5rem;
 }
 
 .nav {
