--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,43 @@ a {
     flex-direction: column;
 }
 
+.card {
+    & {
+        margin-bottom: 24px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        min-width: 0;
+        min-height: 200px;
+        word-wrap: break-word;
+        background-color: rgba(0, 0, 0, 0.15);
+        background-clip: border-box;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        border-radius: .25rem;
+        text-align: left;
+        padding: 0 0 0 0;
+        font-size: 1.5rem;
+    }
+    &__main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: right;
+        padding: 15px 0;
+    }
+    &__header {
+        color: white;
+        text-align: left;
+        font-weight: 400;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+        padding: 5px 10px;
+    }
+    &__text {
+        padding: 1rem;
+        padding-top: 0;
+    }
+}
+
 section {
     height: 100vh;
     font-size: 40px;
