--- a/css/style.scss
+++ b/css/style.scss
@@ -37,9 +37,9 @@ a {
         min-width: 0;
         min-height: 200px;
         word-wrap: break-word;
-        background-color: rgba(0, 0, 0, 0.15);
+        background-color: rgba(0, 0, 0, 0.02);
         background-clip: border-box;
-        border: 1px solid rgba(0, 0, 0, 0.15);
+        border: 0px solid rgba(0, 0, 0, 0.15);
         border-radius: .25rem;
         text-align: left;
         padding: 0 0 0 0;
@@ -67,14 +67,14 @@ a {
 
 section {
     height: 100vh;
-    font-size: 40px;
-    font-weight: 100;
+    font-size: 16px;
+    font-weight: 300;
     background-color: #22A7F0;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-left: 330px;
-    $colors: white, #F64747, #22A7F0, #F9690E, #9B59B6, #03C9A9, #ffcc00;
+    $colors: white, #F64747, #22A7F0, #00838F, #9B59B6, #03C9A9, #ffcc00;
     @for $i from 1 through length($colors) {
         &:nth-child(#{$i}) {
             background: nth($colors, $i)
